fix heading spacing

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -15,6 +15,10 @@ body {
 }
 
 h1 {
+  @media (min-width: 801px), print {
+    width: 75%;
+  }
+  margin-bottom: 0.25em;
   font-family: "Merriweather Sans", Sans-Serif;
   font-weight: 400;
   text-align: center;
@@ -23,8 +27,9 @@ h1 {
 h2 {
   font-size: 140%;
   font-weight: bold;
-  margin-top: 0.5em;
-  margin-bottom: 0.3em;
+  margin: 0;
+  padding-top: 0.5em;
+  padding-bottom: 0.3em;
 }
 
 h3 {
@@ -50,6 +55,7 @@ ul {
 .resume {
   max-width: 1024px;
   margin: 0 auto;
+  padding: 1em;
 }
 .info-block {
   margin-bottom: 1em;
@@ -79,6 +85,8 @@ ul {
     padding-left: 1em;
   }
   @media (max-width: 800px), print {
+    text-align: center;
+    padding: 0 2em;
     > * {
       display: inline-block;
       padding: 0 0.5em;
